Adjustment index.html

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
       
       <form>
         <label for="nome">Nome:</label>
-        <input id="nome" type="text">
+        <input id="nome" type="text" placeholder="Digite seu nome completo">
         <label for="email">Email:</label>
-        <input id="email" type="email">
+        <input id="email" type="email" placeholder="Digite seu e-mail">
         <label for="telefone">Telefone:</label>
-        <input id="telefone" type="number">
+        <input id="telefone" type="number" placeholder="Digite seu telefone">
         <button id="botaoEnviar">Enviar</button>
       </form>
       
